[releng] Add back CMSGC settings to dmk.sh